--- a/src/assets/styles/project/init/_variables.scss
+++ b/src/assets/styles/project/init/_variables.scss
@@ -130,7 +130,7 @@ $gradient: (
   - FONT
   ---------------------- */
 // Font Family
-$ff-main: "Lato", sans-serif;
+$ff-main: "Dosis", sans-serif;
 
 // Font Size
 $fz: (
