--- a/src/assets/styles/project/init/_default.scss
+++ b/src/assets/styles/project/init/_default.scss
@@ -8,8 +8,11 @@ html {
 body {
   font-family: $ff-main;
   font-weight: fw(reguler);
-  font-size: fz(body);
-  line-height: lh(body);
+  // font-size: fz(body);
+  overscroll-behavior: none;
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.4;
   color: color(black);
   letter-spacing: normal;
   &.bg-black{
